--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ npx tailwindcss -i ./Tailwind/input.css -o ./Tailwind/style.css --watch
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2022 Developer Bootcamp</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 </head>
 
 <body class="bg-gray-50">
@@ -24,6 +25,7 @@ npx tailwindcss -i ./Tailwind/input.css -o ./Tailwind/style.css --watch
             <button class="h-12 w-28 2xl:h-12 2xl:w-28 bg-white rounded-xl">Click Here</button>
         </div>
     </div>
+    <div class="text-emerald-900 text-xl text-center mt-12 mb-12"><i class="fa-solid fa-circle-exclamation text-emerald-600"></i> Successfully Deploy on Netlify</div>
 </body>
 
 </html>
