--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@ npx tailwindcss -i ./Tailwind/input.css -o ./Tailwind/style.css --watch
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2022 Developer Bootcamp</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 
 <body class="bg-gray-50">
     <h1 class="font-bold text-2xl text-center">2022 Developer Bootcamp</h1>
     <p class="text-center">Lorem ipsum dolor sit amet, purto habeo et per.</p>
-    <div class="h-52 bg-gradient-to-tr from-purple-500 max-w-lg w-full mx-auto text-center text-white to-pink-400 text-xl rounded-xl mt-12">
+    <div
+        class="h-52 bg-gradient-to-tr from-purple-500 max-w-lg w-full mx-auto text-center text-white to-pink-400 text-xl rounded-xl mt-12">
         <br>
-        Dashbaord
+        Dashboard
         <br>
         <div class="flex vertical items-center justify-center space-x-8 mt-12 text-black text-sm">
             <button class="h-12 w-28 2xl:h-12 2xl:w-40 bg-white rounded-xl">Click Here</button>
@@ -25,7 +26,8 @@ npx tailwindcss -i ./Tailwind/input.css -o ./Tailwind/style.css --watch
             <button class="h-12 w-28 2xl:h-12 2xl:w-28 bg-white rounded-xl">Click Here</button>
         </div>
     </div>
-    <div class="text-emerald-900 text-xl text-center mt-12 mb-12"><i class="fa-solid fa-circle-exclamation text-emerald-600"></i> Successfully Deploy on Netlify</div>
+    <div class="text-emerald-900 text-xl text-center mt-12 mb-12"><i
+            class="fa-solid fa-circle-exclamation text-emerald-600"></i> Successfully Deploy on Netlify</div>
 </body>
 
 </html>
