--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ npx tailwindcss -i ./Tailwind/input.css -o ./Tailwind/style.css --watch
         Dashboard
         <br>
         <div class="flex vertical items-center justify-center space-x-8 mt-12 text-black text-sm">
-            <button class="h-12 w-28 2xl:h-12 2xl:w-40 bg-white rounded-xl">Click Here</button>
-            <button class="h-12 w-28 2xl:h-12 2xl:w-40 bg-white rounded-xl">Click Here</button>
-            <button class="h-12 w-28 2xl:h-12 2xl:w-40 bg-white rounded-xl">Click Here</button>
+            <button class="h-12 w-28 bg-white rounded-xl">Click Here</button>
+            <button class="h-12 w-28 bg-white rounded-xl">Click Here</button>
+            <button class="h-12 w-28 bg-white rounded-xl">Click Here</button>
         </div>
     </div>
     <div class="text-emerald-900 text-xl text-center mt-12 mb-12"><i
